--- a/tables/objectsBuilders.tex
+++ b/tables/objectsBuilders.tex
@@ -74,6 +74,7 @@ Class & Budget &
 
 \end{tabular}%
 
-\caption{Evaluación del uso de los builders identificados (BLD) frente a toda la API (API) en la generación de casos de test.}
+\caption{Evaluación del uso de MGOs frente a toda la API en la generación de
+objetos.}
 \label{tab:results-obj}
 \end{table}
