change title & fixed comments in preliminaries and builders

--- a/beapi.tex
+++ b/beapi.tex
@@ -12,9 +12,9 @@ revelar fallas en el software \cite{Marinov01,Khurshid01,Boyapati02,Sullivan04}.
 
 Los enfoques existentes de generación exhaustiva acotada requieren una
 especificación precisa y formal de las propiedades que deben satisfacer las
-entradas del software bajo test \cite{Boyapati02,KhKhurshid01,Ponzio16Ponzio:2016,Rosner14}. 
+entradas del software bajo test \cite{Boyapati02,Khurshid01,Ponzio:2016,Rosner14}. 
 Esta especificación comúnmente se llama \emph{repOK} (define las propiedades que
-satisface la representación de las entradas) y debe ser brindada por el usuario \cite{Boyapati02,Khurshid01,Ponzio16Ponzio:2016,Rosner14}.
+satisface la representación de las entradas) y debe ser brindada por el usuario \cite{Boyapati02,Khurshid01,Ponzio:2016,Rosner14}.
 En este capítulo, introduciremos BEAPI, un enfoque eficiente que genera un
 conjunto exhaustivo acotado de objetos realizando únicamente llamadas a la API
 de un módulo. Al utilizar la API para construir objetos, BEAPI no requiere 
