--- a/resumen.tex
+++ b/resumen.tex
@@ -3,7 +3,7 @@
 
 \begin{center}
     \Large
-    \textbf{Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones}
+    \textbf{Generación Automática Eficiente de Objetos a partir de APIs de Clase}
         
     \vspace{0.4cm}
     \large
@@ -19,7 +19,7 @@
 
 \begin{center}
     \Large
-    \textbf{Efficient API-Based Bounded-Exhaustive Input Generation Without Formal Specifications}
+    \textbf{Efficient Automatic Generation of Objects from Class APIs}
         
     \vspace{0.4cm}
     \large
