--- a/titlepage-famaf.tex
+++ b/titlepage-famaf.tex
@@ -8,7 +8,7 @@
 \end{center}
 \medskip
 
-{\LARGE \textbf{Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones}}\\ 
+{\LARGE \textbf{Generación Automática Eficiente de Objetos a partir de APIs de Clase}}\\ 
 \vspace{1cm}
 {\Large por Mariano Politano}\\\vspace{1cm}
 
@@ -31,7 +31,7 @@ Tribunal especial (titulares y suplentes):
 \end{center}
 
 \begin{center}
-Generación eficiente de entradas exhaustivas acotadas basada en la API sin la necesidad de especificaciones © 2024 por \href{https://mpolitano.github.io}{Mariano Politano} se distribuye bajo licencia \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0} 
+Generación Automática Eficiente de Objetos a partir de APIs de Clase © 2025 por \href{https://mpolitano.github.io}{Mariano Politano} se distribuye bajo licencia \href{https://creativecommons.org/licenses/by-nc-sa/4.0/}{CC BY-NC-SA 4.0} 
 \end{center}
 
 \end{titlepage} 
