--- a/experimental.tex
+++ b/experimental.tex
@@ -91,7 +91,7 @@ Cuando un algoritmo se evalúa con una función objetivo específica, usamos la 
 \textbf{Algoritmo–Fitness}. 
 Esto da lugar a cuatro algoritmos a evaluar: \textbf{GA–FGE}, \textbf{GA–FRC}, \textbf{HC–FGE}, 
 \textbf{HC–FRC}. Notar que el trabajo sobre cómputo de métodos generadores
-de Politano et. al. \cite{} \pp{Tu paper de builders} presenta el algoritmo
+de Politano et. al. \cite{Ponzio19} \pp{Tu paper de builders} presenta el algoritmo
 \textbf{GA–FGE}. Las otras variantes fueron agregadas y evaluadas de forma
 preliminar para esta tesis. 
 
@@ -108,13 +108,16 @@ Para las evaluaciones con la función objetivo basada en cobertura (\textbf{FRC}
 fijamos un tiempo máximo de ejecución de Randoop de 30 segundos por candidato. 
 %Este tiempo fue suficiente para generar suites de tests y lograr buena cobertura de código en nuestros experimentos.  
 \pp{Esto de abajo no se entiende, tenemos que charlarlo:
-
-y controlamos la aleatoriedad mediante semillas. Randoop utiliza esta semilla para controlar la generación de tests y
-permitir la reproducción de resultados. Dado que Randoop introduce un grado
-considerable de aleatoriedad, optamos por utilizar dos semillas distintas para capturar la variabilidad introducida por el 
-generador aleatorio, registrándolas para permitir la reproducción de resultados. 
-Esta configuración proporciona una medida más robusta del desempeño de los algoritmos en contextos con 
-elementos no determin\'isticos.}
+\cacho{Lo cambiené un poco pero no sé si está bien:}
+Randoop introduce un componente de aleatoriedad en la generación de tests. 
+Para controlar este factor y garantizar la reproducibilidad de los resultados de los experimentos con los mismo conjunto de parámetros, 
+fijamos dos semillas distintas.
+% y controlamos la aleatoriedad mediante semillas. Randoop utiliza esta semilla para controlar la generación de tests y
+% permitir la reproducción de resultados. Dado que Randoop introduce un grado
+% considerable de aleatoriedad, optamos por utilizar dos semillas distintas para capturar la variabilidad introducida por el 
+% generador aleatorio, registrándolas para permitir la reproducción de resultados. 
+% Esta configuración proporciona una medida más robusta del desempeño de los algoritmos en contextos con 
+% elementos no determin\'isticos.}
 
 En el caso de la función objetivo basada en generación exhaustiva (\textbf{FGE}),
 el parámetro central es el \emph{scope}, entendido como la cantidad máxima de
@@ -124,6 +127,9 @@ En nuestros experimentos fijamos el scope en 5. Es decir, permitimos un máximo
 de cinco objetos por clase, y 5 valores posibles para tipos primitivos (ej. para enteros
 usamos valores entre 0 y 4). \pp{Acá tiene que haber un TO también. Sino en
 algunos casos corre el riesgo de no terminar.}
+\cacho{Además, establecimos un tiempo máximo de ejecución de 30 segundos por caso (\emph{timeout}), 
+para evitar que las instancias con combinaciones más grandes queden en una ejecución infinita, 
+debido a la explosión combinatoria del espacio de búsqueda.}
 %Además, para evitar diferencias espurias que no reflejan cambios semánticos en la representación, 
 %omitimos campos internos que no afectan la estructura lógica de los objetos generados (por ejemplo, \texttt{modCount}, común en colecciones de Java), 
 %el cual sólo contabiliza modificaciones internas sin alterar la estructura observada del objeto. \pp{Yo no pondría esto último porque no recuerdo que lo
@@ -137,6 +143,14 @@ generación exhaustiva, no fue necesario realizar múltiples repeticiones, dado
 que dicha evaluación es determinística bajo una misma configuración. \pp{No estoy de acuerdo con esto. El algoritmo genético es aleatorio
 independientemente de la fitness que use. Todos hay que ejecutarlos múltiples
 veces. Hablémoslo.}
+\cacho{Otra version, no se si estoy en lo correcto:}
+\cacho{
+En el caso particular de la función objetivo basada en generación exhaustiva, 
+consideramos que la variabilidad es mínima bajo una misma configuración, 
+por lo que realizamos una única ejecución por caso. No obstante, reconocemos que la generación exhaustiva
+podría presentar pequeños efectos de no-determinismo (por ejemplo, diferencias en el orden de exploración o de poda), 
+que podrían influir en el tiempo de ejecución. Sin embargo, estos efectos son marginales y no afectan la precisión de los resultados, 
+dado que la generación exhaustiva siempre produce el mismo conjunto de objetos para una configuración dada. }
 
 Todos los experimentos fueron ejecutados en una máquina con procesador Intel
 Core i7-6700 a 3.4\,GHz y 8\,GB de RAM, y sistema operativo
@@ -167,18 +181,17 @@ Los resultados se muestran en la Tabla~\ref{tab:eficiencia}. Cada fila
 corresponde a un caso de estudio; debajo del nombre se indica el tamaño de la API
 (\#API) y la cantidad de métodos generadores del \emph{ground truth}
 (\#MGO). Las columnas se agrupan por algoritmo (GA y HC) y, dentro de
-cada uno, por función objetivo (FGE y FRC) \pp{Actualizar la tabla con estos
-nombres}. Para cada configuración reportamos el promedio de 5 ejecuciones.
+cada uno, por función objetivo (FGE y FRC). Para cada configuración reportamos el promedio de 5 ejecuciones.
 
-Para comparar la eficiencia de \emph{GA} y \emph{HC}, utilizamos la misma 
-función objetivo (\emph{FGE} o \emph{FRC}) y medimos el tiempo de ejecución 
+Para comparar la eficiencia de \texttt{GA} y \texttt{HC}, utilizamos la misma 
+función objetivo (\texttt{FGE} o \texttt{FRC}) y medimos el tiempo de ejecución 
 promedio sobre los 12 casos de estudio. Esto da los siguientes 
 resultados:
 A continuación, reportamos los tiempos promedio de ejecución (sobre los 12 casos
 de estudio) de los algoritmos evaluados:
 \pp{Hay algunos casos en los que se supera el
 timeout! NCL y TreeMap con GA+FRC}
-
+\cacho{Chequear los experimentos!}
 \begin{itemize}
   \item \textbf{GA+FGE}: 259 segundos
   \item \textbf{GA+FRC}: 1809.5 segundos
@@ -186,37 +199,37 @@ timeout! NCL y TreeMap con GA+FRC}
   \item \textbf{HC+FRC}: 622.8 segundos
 \end{itemize}
 
-Estos valores muestran con claridad que \emph{HC} es sistemáticamente más rápido
-que \emph{GA}. En particular, con \emph{FGE} el tiempo de \emph{HC} es 
-aproximadamente 13 veces menor que el de \emph{GA}, mientras que usando 
-\emph{FRC} es casi 3 veces menor. 
+Estos valores muestran con claridad que \texttt{HC} es sistemáticamente más rápido
+que \texttt{GA}. En particular, con \texttt{FGE} el tiempo de \texttt{HC} es 
+aproximadamente 13 veces menor que el de \texttt{GA}, mientras que usando 
+\texttt{FRC} es casi 3 veces menor. 
 A nivel de casos
-individuales, \emph{HC} supera a \emph{GA} en todos los casos con \emph{FGE} y en 11 de 12 casos con \emph{FRC},
-siendo \emph{HashSet} la única excepción donde \emph{GA+FRC} fue más veloz.
+individuales, \texttt{HC} supera a \texttt{GA} en todos los casos con \texttt{FGE} y en 11 de 12 casos con \emph{FRC},
+siendo \texttt{HashSet} la única excepción donde \texttt{GA+FRC} fue más veloz.
 \cacho{Revisar esto, no me acuerdo bien, ver el paper} \pp{No hay razón real
 para esto, suena a bug. Además, el que está mal es sólo la versión con FRC. En
 el otro gana HC}.
 
 Esta diferencia se entiende por la propia naturaleza de los algoritmos.
-El algoritmo genético (\textbf{GA}) mantiene y evoluciona poblaciones de
+El algoritmo genético (\texttt{GA}) mantiene y evoluciona poblaciones de
 candidatos, lo que implica evaluar la función objetivo (que es costosa
 computacionalmente) para muchos candidatos.
-En cambio, \emph{HC} \pp{Hay que poner en typewriter la fuente de los algoritmos
+En cambio, \texttt{HC} \pp{Hay que poner en typewriter la fuente de los algoritmos
 y casos de estudio en todo el texto. emph no se usa para eso, sino para resaltar
-palabras, y poner palabras en inglés} sigue una estrategia \emph{greedy}: elige la mejor opción posible entre los sucesores del candidato actual. Esto lo vuelve más eficiente.
-Sin embargo, en ciertos casos \emph{HC} podría perder precisión en el cómputo de métodos
+palabras, y poner palabras en inglés} \cacho{Hecho} sigue una estrategia \emph{greedy}: elige la mejor opción posible entre los sucesores del candidato actual. Esto lo vuelve más eficiente.
+Sin embargo, en ciertos casos \texttt{HC} podría perder precisión en el cómputo de métodos
 generadores. 
 
-Comparando las funciones objetivo, \emph{FGE}
-es más rápida que \emph{FRC}. En \emph{GA}, FRC requiere en promedio
-unas siete veces más tiempo que \emph{FGE}; en \emph{HC}, \emph{FRC} requiere unas casi 32 veces
-más tiempo que \emph{FGE}. La función objetivo \emph{FGE} debido a que para
+Comparando las funciones objetivo, \texttt{FGE}
+es más rápida que \texttt{FRC}. En \texttt{GA}, FRC requiere en promedio
+unas siete veces más tiempo que \texttt{FGE}; en \texttt{HC}, \texttt{FRC} requiere unas casi 32 veces
+más tiempo que \texttt{FGE}. La función objetivo \texttt{FGE} debido a que para
 computar MGO en nuestos casos de estudio es suficiente con generar objetos de tamaño 
-relativamente pequeño (scope 5). Además, \emph{FGE} utiliza BEAPI (ver
+relativamente pequeño (scope 5). Además, \texttt{FGE} utiliza BEAPI (ver
 sección \ref{} \pp{referencia}), que implementa mecanismos que hacen a la
 generación acotada más eficiente (generación guiada por el feedback de la
 ejecución, state matching). 
-Todas \pp{Ambas funciones?} tienen un \emph{timeout} de 
+Todas \pp{Ambas funciones?} tienen un \texttt{timeout} de 
 30 segundos \pp{esto va antes, cuando se presentan los algoritmos}, pero muchas veces
 la generación exhaustiva acotada termina la generación de objetos antes del llegar al timeout. 
 En cambio, la función objetivo FRC debe generar una gran cantidad de tests en
@@ -226,9 +239,9 @@ eso lo que la hace tan lenta.}
 Esto explica porque FGE es más rápida en comparación con la función objetivo FRC
 en estos experimentos.
 
-Por otra parte, la función objetivo \emph{FRC} tiene la ventaja de que no requiere 
+Por otra parte, la función objetivo \texttt{FRC} tiene la ventaja de que no requiere 
 que el usuario provea la definición del scope para la generación exhaustiva acotada. 
-Además, \emph{FRC} podría ser más escalable que \emph{FGE} en casos donde
+Además, \texttt{FRC} podría ser más escalable que \texttt{FGE} en casos donde
 la cantidad de objetos sea demasiado grande para ser generados de manera
 exhuastiva (por ejemplo, en clases con invariantes de representación más débiles
 que los evaluados aquí).
@@ -264,35 +277,41 @@ en todos los casos un conjunto de métodos generadores de objetos suficiente
 fue generado por todos los algoritmos. Sin embargo, como puede verse en la
 tabla, algunos algoritmos incluyen algunos métodos irrelevantes en algunos casos.
 
-
-
-Se observan cuatro patrones claros. Primero, \emph{HC+FRC} encuentra el conjunto
-\emph{minimal exacto en 12/12} sujetos. Segundo, \emph{HC+GE} es exacto en
-\emph{11/12} sujetos y sólo sobredimensiona en \emph{Lits} (retorna 7 en lugar de
+Se observan cuatro patrones claros. Primero, \texttt{HC+FRC} encuentra el conjunto
+\emph{minimal exacto en 12/12} sujetos. Segundo, \texttt{HC+GE} es exacto en
+\emph{11/12} sujetos y sólo sobredimensiona en \texttt{Lits} (retorna 7 en lugar de
 6).\cacho{Revisar esto, no me acuerdo bien, ver el paper}
-Tercero, \textbf{GA+GE} es exacto en \emph{10/12} sujetos; sobredimensiona en
-\emph{Lits} (7 vs.\ 6) y \emph{HashMap} (2.60 vs.\ 2). Cuarto, \textbf{GA+FGE} es
+Tercero, \texttt{GA+GE} es exacto en \emph{10/12} sujetos; sobredimensiona en
+\emph{Lits} (7 vs.\ 6) y \texttt{HashMap} (2.60 vs.\ 2). Cuarto, \texttt{GA+FGE} es
 exacto en \emph{8/12} sujetos y tiende a incluir métodos adicionales en
-\emph{NCL} (3.80 vs.\ 3), \emph{TreeMap} (5.60 vs.\ 3), \emph{TreeSet}
-(3.20 vs.\ 3) y \emph{HashSet} (3 vs.\ 2). \pp{Las conclusiones deberían ser
+\texttt{NCL} (3.80 vs.\ 3), \texttt{TreeMap} (5.60 vs.\ 3), \texttt{TreeSet}
+(3.20 vs.\ 3) y \texttt{HashSet} (3 vs.\ 2). \pp{Las conclusiones deberían ser
     bien simples: HC+FRC y HC+FGE dan 10 puntos en todos los casos, mientras que
     GA+FGE da razonablemente bien en la mayoría de los casos, y GA+FRC no importa 
 demasiado porque es muy lento.}
+\cacho{
+Se observan tres patrones claros. Primero, \texttt{HC+FRC} y \texttt{HC+FGE} encuentra el conjunto de métodos generadores,
+\emph{minimal}, para las doce clases analizadas.
+Segundo, \texttt{GA+FGE} obtiene resultados muy cercanos al \emph{minimal} en la mayoría de los casos, 
+con algun método de mas en algunas clases (\texttt{NCL}, \texttt{TreeMap}, \texttt{TreeSet}, \texttt{HashSet}).
+Por último, \texttt{GA+FRC} muestra un comportamiento correcto pero con un costo computacional considerablemente mayor, 
+por lo que no resulta competitivo en términos de eficiencia.
+}
 
-Estas desviaciones tienen dos causas principales. Por un lado, en \textbf{GE} la
+Estas desviaciones tienen dos causas principales. Por un lado, en \texttt{GE} la
 evaluación se realiza por enumeración acotada; bajo scope fijo y valores
 iniciales concretos, ciertas combinaciones pueden no ser alcanzables sin
 incorporar alguna rutina adicional (como ocurre en \emph{Lits}), lo que hace que
 el conjunto devuelto sea suficiente pero no minimal \pp{Es difícil de justificar 
     esto, deberíamos charlarlo. Pero para mi si hacés generación exhaustiva no
-te pueden faltar cosas}. 
+te pueden faltar cosas}. \cacho{Revisar esto, no me acuerdo bien, ver experimentos URGENTE!}
 %Por otro lado, en
 %\textbf{FGE} la métrica de cobertura puede favorecer métodos que
 %aumentan rápido la cobertura de ramas/líneas aunque no sean estrictamente
 %necesarios para construir todas las instancias, por lo que el algoritmo puede estabilizarse en soluciones
 %ligeramente sobredimensionadas. PABLO: Esto no es cierto.
 
-En el caso particular del algoritmo genético (\textbf{GA}), además de la
+En el caso particular del algoritmo genético (\texttt{GA}), además de la
 estocasticidad propia de la búsqueda (selección, cruce, mutación), empleamos un
 criterio de corte del algoritmo que detiene la evolución cuando el mejor
 fitness no mejora durante 5 generaciones consecutivas (ver
@@ -300,7 +319,7 @@ Sección~\ref{alg:approachGA}). Este criterio es eficaz para acotar el presupues
 pero puede congelar soluciones suficientes levemente mayores que el
 mínimo cuando la presión selectiva ya no impulsa mejoras adicionales. \pp{Hay
 que arreglar Lits, y TreeMap con GA+FRC que da demasiado horrible. Puede ser por
-Timeout?}.
+Timeout?}. \cacho{Revisar esto, no me acuerdo bien, ver experimentos URGENTE!}
 
 En síntesis, todas las configuraciones producen conjuntos suficientes, y
 \textbf{HC+FGE} además logra el mínimo exacto de forma sistemática. Cuando
@@ -340,6 +359,7 @@ Además, reportamos el tamaño del objeto más grande generado por las técnicas
 puesto, o no?} (calculamos los tamaños de objetos con el método
 \texttt{size()} de las clases bajo análisis). 
 Los resultados obtenidos se resumen en la Tabla~\ref{tab:results-obj}.
+\cacho{Agregar table, URGENTE!. Esta en las tablas, agregar y escribir esa parte}
 
 En promedio para todos los presupuestos, \texttt{MGO} genera 6355 objetos 
 frente a 1597 de \texttt{API}. Es decir, el uso de métodos generadores resulta
@@ -355,6 +375,7 @@ comparación con la \texttt{API}. Notablemente, la diferencia en la cantidad de
 objetos generados se incrementa con el presupuesto. 
 
 \pp{Falta lo de size}
+\cacho{Agregar table, URGENTE!. Esta en las tablas, agregar y escribir esa parte}
 
 %La ventaja es consistente todos los casos. Si
 %promediamos por clase (sobre los tres presupuestos), \texttt{MGO} es mejor
